# rust-course-fei

./: notes.md
.devcontainer/: Dockerfile  devcontainer.json
lessons/01/exercises/src/: lib.rs
lessons/01/exercises/tests/: 01_factorial.rs  02_array_max.rs
lessons/02/exercises/src/: lib.rs
lessons/02/exercises/tests/: 01_calc.rs  02_match_exercises.rs  03_state_transition_struct.rs  04_state_transition_enum.rs
lessons/03/exercises/src/: in_place_mergesort.rs  lib.rs  main.rs  merge_slices.rs
lessons/03/exercises/tests/: 04_merge_slices.rs
lessons/07/exercises/src/: factorio.rs  lib.rs  main.rs  worker_queue.rs
lessons/07/exercises/tests/: 01_parallel_sum.rs  02_worker_queue.rs  03_factorio.rs
lessons/08/exercises/: Cargo.toml
lessons/08/exercises/src/: lib.rs  server.rs
lessons/09/exercises/: Cargo.toml
lessons/09/exercises/src/: lib.rs  server.rs
lessons/10/exercises/: Cargo.toml
lessons/10/exercises/src/: lib.rs  server.rs
lessons/10_parallel/exercises/: Cargo.toml
lessons/10_parallel/exercises/src/: lib.rs  server.rs
playground/: Cargo.toml
playground/src/: main.rs  messages.rs  reader.rs  writer.rs
