[package]
name = "week10_parallel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
    "time",
    "sync",
    "io-util",
] }
futures-util = "0.3.31"
